--- a/main/style.css
+++ b/main/style.css
@@ -1,3 +1,19 @@
+html{
+    font-size: 100%;
+}
 h1{
-    font-size: 30px;
+    background-color: greenyellow;
+    width:13em;
+    font-size: 3em;
+    font-weight: 100;
+}
+a{
+    font-size: 2rem;
+    text-decoration: none;
+}
+.web{
+    color: darkgoldenrod;
+}
+#editor{
+    color: red;
 }
