Html page changes

--- a/pages/styles/html.css
+++ b/pages/styles/html.css
@@ -1,18 +1,56 @@
-#title{
-	color:blue;
-	font-size: 30px;
+.sections {
+    margin-top: 50px;
+    font-family: Arial, sans-serif;
 }
-h2, h3{
-	font-size: 25px;
-	text-decoration: underline;
+  
+table {
+    border-collapse: collapse;
+    margin-top: 20px;
+    width: 100%;
 }
-h3{
-	color:purple;
-	font-size: 20px;
+  
+th, td {
+    text-align: left;
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
 }
-.cool {
-	color:green;
+  
+th {
+    background-color: #f2f2f2;
 }
-.divs span{
-	color:grey;
+  
+code {
+    background-color: #f2f2f2;
+    border-radius: 3px;
+    padding: 2px 5px;
+    font-family: Consolas, monospace;
+}
+  
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #6d0404;
+    color: #fff;
+    padding: 10px;
+}
+  
+nav ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+  
+nav ul li {
+    margin: 0 10px;
+}
+  
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+  
+nav ul li a:hover {
+    text-decoration: underline;
 }
