--- a/pages/styles/html.css
+++ b/pages/styles/html.css
@@ -50,7 +50,46 @@ nav ul li a {
     color: #fff;
     text-decoration: none;
 }
+ 
+.menu {
+    background-color: #f8f8f8;
+    padding: 10px 0;
+    text-align: center;
+    border-radius: 10px;
+  }
   
-nav ul li a:hover {
-    text-decoration: underline;
-}
+  .menu ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .menu li {
+    margin: 0 20px;
+    list-style: none;
+    border-radius: 10px;
+  }
+  
+  .menu li a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    transition: all 0.3s ease-in-out;
+    border-radius: 10px; 
+  }
+  
+  .menu li a:hover {
+    color: #fff;
+    background-color: #333;
+  }
+  
+  @media only screen and (max-width: 768px) {
+    .menu li {
+      margin: 0 10px;
+    }
+  }
+  
