css page changes

--- a/pages/styles/css.css
+++ b/pages/styles/css.css
@@ -8,6 +8,21 @@ table {
     line-height: 1.5;
     text-align: left;
   }
+
+  header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  background-color: #4c4c4c;
+}
+
+h1 {
+  font-family: Arial, sans-serif;
+  font-size: 36px;
+  color: #fff;
+  text-transform: uppercase;
+}
   
   th {
     background-color: #333;
